tests/negative/array/array_fixed_size.tx
// EXPECTED: COMPILE_ERROR
// Description: Test invalid push operation on fixed-size arrays.

function main() {
    let arr: int[3] = [1, 3, 4];
    
    // Case 1: push on fixed-size array
    arr.push(5);

}
